@@ -281,7 +281,7 @@ function initKeysPanel(pCallBack){
         lFuncs =[
             null,
             null,                   /* f1 */
-            null,                   /* f2 */
+            DOM.renameCurrentFile,  /* f2 */
             CloudCmd.Viewer,        /* f3 */
             CloudCmd.Editor,        /* f4 */
             null,                   /* f5 */
