@@ -30,6 +30,7 @@ var CloudCommander, Util, DOM;
         S           : 83,
         T           : 84,
         
+        F1          : 112,
         F2          : 113,
         F3          : 114,
         F4          : 115,
@@ -117,6 +118,9 @@ var CloudCommander, Util, DOM;
                             DOM.deleteCurrent(lCurrentFile);
                         else
                             DOM.promptDeleteCurrent(lCurrentFile);
+                    }
+                    else if(lKeyCode === KEY.F1){
+                        DOM.preventDefault(pEvent);
                     }
                     else if(lKeyCode === KEY.F2)
                         DOM.renameCurrentFile(lCurrentFile);
