@@ -75,10 +75,33 @@ var CloudCommander, Util, DOM, $;
     };
     
     
+    FancyBox.showHelp                   = function(){
+        DOM.Images.showLoad();
+        DOM.ajax({
+            url: '/README.md', 
+            success:  function (pData){
+                var lData = {text: pData};
+                DOM.ajax({
+                    method  : 'post',
+                    url     : 'https://api.github.com/markdown',
+                    data    : Util.stringifyJSON(lData),
+                    success:function(pResult){
+                        DOM.Images.hideLoad();
+                        $.fancybox(pResult, Config);
+                    },
+                
+                    error: DOM.Images.showError
+                });
+            },
+            
+            error:DOM.Images.showError
+        });
+    };
+    
     /**
      * function shows FancyBox
      */
-    FancyBox.show                       = function(){
+    FancyBox.show                       = function(pCallBack){
         var lPath = DOM.getCurrentPath();
         
         if( Util.checkExtension(lPath, ['png','jpg', 'gif','ico']) )
@@ -88,10 +111,13 @@ var CloudCommander, Util, DOM, $;
                 $.fancybox('<div id=CloudViewer tabindex=0>' +
                     pParams.data + '</div>', Config);
             });
+        
+        Util.exec(pCallBack);
     };
     
-    CloudCmd.Viewer.init                = function(){
+    CloudCmd.Viewer.init                = function(pCallBack){
         Util.loadOnLoad([
+            pCallBack,
             FancyBox.show,
             FancyBox.load,
             DOM.jqueryLoad
@@ -103,15 +129,20 @@ var CloudCommander, Util, DOM, $;
         };
         
         var lKeyListener = function(pEvent){
-            var lF3         = CloudCmd.KEY.F3,
+            var lKEY        = CloudCmd.KEY,
+                lF3         = lKEY.F3,
                 lKeyBinded  = KeyBinding.get(),
-                lKey        = pEvent.keyCode,
+                lKeyCode    = pEvent.keyCode,
                 lShift      = pEvent.shiftKey;
             
             /* если клавиши можно обрабатывать */
-            if( lKeyBinded && lKey === lF3 && lShift ){
-                lView();
-                pEvent.preventDefault();
+            if( lKeyBinded){
+                if(lKeyCode === lF3 && lShift){
+                    lView();
+                    pEvent.preventDefault();
+                }
+                else if(lKeyCode === lKEY.F1)
+                    FancyBox.showHelp();
             }
         };
         
