@@ -1,4 +1,4 @@
-/* module make possible connectoin thrue socket.io on a server */
+/* module make possible connectoin thru socket.io on a server */
 
 (function(){
     'use strict';
